exports[`Sidebar [common] example testing should match snapshot(s) for 01.default-side-bar 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-position-left"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={250}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Title
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="left" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      Minim 90\'s paleo retro, fugiat aliqua hashtag enim photo booth listicle next level. Consectetur fap proident magna culpa. Art party meh ad, four loko slow-carb venmo distillery wolf cornhole nisi.
    </div>
  </SplitVertical.LeftPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    Twee iPhone intelligentsia, schlitz normcore cold-pressed hella sapiente meh adipisicing sustainable kogi sed. Letterpress plaid aute, brunch chillwave anim mlkshk. Farm-to-table austin post-ironic, man bun gluten-free nesciunt sartorial tacos tousled kickstarter shabby chic migas. Kombucha flannel before they sold out elit voluptate pinterest chambray, odio stumptown street art. Kitsch humblebrag actually, cillum kale chips hashtag shoreditch pariatur waistcoat pop-up consequat leggings try-hard. Marfa crucifix seitan health goth portland. Cliche ennui vero, whatever swag kogi ugh fixie wayfarers before they sold out irure culpa marfa mlkshk bushwick.
  </SplitVertical.RightPane>
</SplitVertical>
`;

exports[`Sidebar [common] example testing should match snapshot(s) for 02.disable-resize 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-resize-disabled lucid-Sidebar-is-position-left"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={250}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Title
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="left" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      Cold-pressed aesthetic biodiesel twee, heirloom vice iPhone austin. Truffaut wolf offal roof party, neutra yr drinking vinegar bitters single-origin coffee austin mlkshk mixtape semiotics blog. Pickled squid asymmetrical locavore before they sold out whatever.
    </div>
  </SplitVertical.LeftPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    Chartreuse keffiyeh meggings church-key, gochujang 90\'s messenger bag. Chillwave poutine cronut whatever occupy, squid vice organic. Tilde kinfolk whatever VHS. Swag gentrify put a bird on it, pour-over jean shorts knausgaard cray twee single-origin coffee lo-fi church-key cronut. Pabst tousled selfies try-hard. Sartorial cred ethical, food truck leggings next level sustainable flexitarian chillwave knausgaard pitchfork. Direct trade poutine photo booth mustache, cliche semiotics skateboard 90\'s. Meggings actually distillery small batch pickled quinoa. Migas williamsburg polaroid trust fund. Slow-carb truffaut chia, single-origin coffee meggings cornhole four loko chambray put a bird on it art party semiotics. Food truck mumblecore VHS photo booth, brunch direct trade flexitarian before they sold out truffaut squid cred everyday carry salvia neutra. Lo-fi chartreuse semiotics, paleo butcher knausgaard direct trade gentrify post-ironic. XOXO craft beer affogato YOLO, raw denim umami irony pabst echo park humblebrag ugh plaid. Master cleanse tilde tattooed, bushwick seitan selfies four dollar toast hashtag trust fund sartorial cliche.
  </SplitVertical.RightPane>
</SplitVertical>
`;

exports[`Sidebar [common] example testing should match snapshot(s) for 03.initial-collapsed 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-position-left"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={250}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Title
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="left" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      Try-hard cornhole ea artisan, laborum wolf eiusmod chillwave irure. Lomo chicharrones taxidermy narwhal. Cronut deep v PBR&B photo booth tilde. Asymmetrical waistcoat williamsburg 3 wolf moon, poutine magna dreamcatcher disrupt eiusmod thundercats farm-to-table lumbersexual nisi mlkshk tote bag.
    </div>
  </SplitVertical.LeftPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    Celiac ad skateboard twee PBR&B. XOXO freegan pitchfork, waistcoat listicle flexitarian mollit adipisicing. Delectus freegan et sartorial, velit occupy exercitation fingerstache +1 ramps. Exercitation pitchfork kale chips, eu everyday carry nostrud aesthetic etsy health goth DIY nisi fingerstache wolf neutra velit. Migas helvetica odio taxidermy. Truffaut meditation cray small batch, schlitz master cleanse cliche taxidermy labore gochujang bitters. Synth fixie banh mi bushwick shoreditch cold-pressed.
  </SplitVertical.RightPane>
</SplitVertical>
`;

exports[`Sidebar [common] example testing should match snapshot(s) for 04.position-right 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-position-right"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={250}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Title
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="right" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      Paleo art party disrupt, consequat kogi fashion axe tofu trust fund raw denim readymade. Seitan banjo salvia organic ethical. Next level pork belly sustainable tumblr nostrud.
    </div>
  </SplitVertical.RightPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    Do nesciunt lumbersexual excepteur adipisicing tacos green juice readymade semiotics, pinterest tofu VHS. Paleo dreamcatcher mollit, hoodie four dollar toast typewriter kitsch magna aliquip ethical sunt tattooed. Four dollar toast stumptown umami gastropub heirloom flexitarian. Nihil williamsburg incididunt whatever. Godard commodo bespoke tofu. Selvage polaroid echo park hella, beard flexitarian roof party dolor. Consequat kickstarter ea, sint minim selfies wolf cupidatat everyday carry.
  </SplitVertical.LeftPane>
</SplitVertical>
`;

exports[`Sidebar [common] example testing should match snapshot(s) for 05.custom-title 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-position-left"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={250}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Sidebar Title 
        <button>
          Edit
        </button>
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="left" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      You can also set the 
      <code>
        title
      </code>
       or 
      <code>
        Title
      </code>
       prop on 
      <code>
        <Sidebar>
      </code>
       or 
      <code>
        <Sidebar.Bar>
      </code>
      .
    </div>
  </SplitVertical.LeftPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    Helvetica narwhal irony, hoodie leggings occaecat tattooed authentic cred. Tumblr cred quinoa normcore, mumblecore cardigan cold-pressed dreamcatcher craft beer ad direct trade vero accusamus cray. Roof party chia shabby chic synth. Pariatur organic before they sold out everyday carry food truck. Labore four loko nihil, narwhal actually kinfolk mustache jean shorts. Meh kickstarter chicharrones williamsburg bushwick yr, PBR&B fap. Lo-fi leggings magna yuccie, tattooed accusamus blog literally gochujang listicle cliche humblebrag swag kombucha tousled.
  </SplitVertical.RightPane>
</SplitVertical>
`;

exports[`Sidebar [common] example testing should match snapshot(s) for 06.custom-width 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-position-left"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={400}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Title
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="left" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      Meditation photo booth actually chicharrones sed consectetur voluptate stumptown. Food truck nihil ut mixtape, ex deep v polaroid aesthetic. Duis street art stumptown nihil, aliquip vero VHS heirloom waistcoat adipisicing post-ironic lo-fi biodiesel.
    </div>
  </SplitVertical.LeftPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    Trust fund vegan godard beard, portland humblebrag placeat neutra chambray retro ugh kitsch flannel sapiente mustache. Cred placeat helvetica cray, do before they sold out tilde. Deserunt everyday carry brooklyn kombucha yr fanny pack banh mi, eiusmod intelligentsia tempor tacos. Waistcoat neutra kale chips, keffiyeh ex nulla gochujang crucifix duis typewriter hashtag reprehenderit. Ad nihil mixtape 8-bit, photo booth anim post-ironic vegan qui put a bird on it crucifix. Waistcoat chartreuse ethical, adipisicing jean shorts direct trade PBR&B humblebrag pariatur nulla mollit stumptown listicle. Flannel williamsburg vice flexitarian bespoke elit.
  </SplitVertical.RightPane>
</SplitVertical>
`;

exports[`Sidebar [common] example testing should match snapshot(s) for 09.nested-sidebars 1`] = `
<SplitVertical
  className="lucid-Sidebar lucid-Sidebar-is-position-left"
  collapseShift={33}
  isAnimated={true}
  isExpanded={true}
  isResizeable={true}
  onResize={[Function]}
  onResizing={[Function]}>
  <SplitVertical.LeftPane
    className="lucid-Sidebar-Bar"
    isPrimary={false}
    width={250}>
    <div
      className="lucid-Sidebar-Bar-overlay" />
    <div
      className="lucid-Sidebar-Bar-header">
      <div
        className="lucid-Sidebar-Bar-Title">
        Title
      </div>
      <div
        className="lucid-Sidebar-expander"
        onMouseDown={[Function]}>
        <ChevronIcon
          direction="left" />
      </div>
    </div>
    <div
      className="lucid-Sidebar-Bar-content lucid-Sidebar-Bar-content-has-gutters">
      Bitters shabby chic tacos, sapiente drinking vinegar readymade gochujang typewriter. Gluten-free cred sartorial pop-up commodo.
    </div>
  </SplitVertical.LeftPane>
  <SplitVertical.Divider
    className="lucid-Sidebar-Divider">
    <GripperVerticalIcon
      className="lucid-Sidebar-Divider-gripper" />
  </SplitVertical.Divider>
  <SplitVertical.RightPane
    className="lucid-Sidebar-Primary"
    isPrimary={true}>
    <Sidebar
      position="right">
      <Sidebar.Bar
        hasGutters={true}>
        Id mumblecore blue bottle vegan, fingerstache commodo health goth man bun bitters. Ad ennui authentic, offal humblebrag paleo minim vero hammock kickstarter reprehenderit gastropub.
      </Sidebar.Bar>
      <SplitVertical.Primary>
        Dreamcatcher jean shorts veniam paleo humblebrag, nihil venmo consequat. Tempor kickstarter fingerstache veniam austin, assumenda lomo eu YOLO small batch 3 wolf moon. Chia offal cliche, thundercats try-hard before they sold out tofu freegan ethical scenester polaroid quis next level jean shorts. Sed hoodie ullamco, XOXO laboris yuccie farm-to-table narwhal jean shorts odio affogato irure. Marfa echo park mixtape pinterest accusamus, ullamco normcore deep v hammock. Odio cronut authentic id sunt, knausgaard YOLO. Roof party mollit kickstarter sustainable sriracha.
      </SplitVertical.Primary>
    </Sidebar>
  </SplitVertical.RightPane>
</SplitVertical>
`;
